--- a/static/style.css
+++ b/static/style.css
@@ -1,8 +1,42 @@
-.card {
-    align-items: center;
-    justify-content: center;
+.card {  display: flex;
+  align-items: center;
+  justify-content: center; }
+
+.card-body {max-width: 1000px; }
+
+/* .bubble:hover {
+  outline: 1px solid #ccc; /*border-radius: 30px;
+  -webkit-box-shadow: 7px 4px 45px -9px rgba(0,0,0,0.33);
+  -moz-box-shadow: 7px 4px 45px -9px rgba(0,0,0,0.33);
+  box-shadow: 7px 4px 45px -9px rgba(0,0,0,0.33);
+} */
+
+.bubble{
+  background-color: #fff;
+  border-radius: 15px;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+  -webkit-transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+  transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 
-.card-body{
-    max-width: 1000px;
+.bubble::after{
+  content: "";
+  border-radius: 15px;
+  z-index: -1;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+  opacity: 0;
+  -webkit-transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+  transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+
+.bubble:hover{
+  -webkit-transform: scale(1.01, 1.01);
+  transform: scale(1.01, 1.01);
+}
+
+.bubble:hover::after{
+  opacity: 1;
 }
