--- a/templates/index.html
+++ b/templates/index.html
@@ -4,20 +4,26 @@
     <meta charset="UTF-8">
     <title>Title</title>
 
-    <link href="{{ url_for('static', filename='bootstrap.min.css') }}" rel="stylesheet">
-    <script src="{{ url_for('static', filename='bootstrap.min.css') }}"></script>
-    <link href="{{ url_for('static', filename='style.css') }}" rel="stylesheet">
+
+
+<!--     <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap.min.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}"> -->
+<!--     <script src="{{ url_for('static', filename='bootstrap.min.js') }}" crossorigin="anonymous"></script>
+    <script src="{{ url_for('static', filename='main.js') }}" crossorigin="anonymous"></script> -->
+
+
+    <link rel="stylesheet" href="../static/bootstrap.min.css">
+    <link rel="stylesheet" href="../static/style.css">
+    <script src="../static/bootstrap.min.js" crossorigin="anonymous"></script>
+    <script src="../static/main.js" crossorigin="anonymous"></script>
 </head>
 <body>
-   <div class="card grey lighten-3 chat-room">
+
+<div class="card grey lighten-3 chat-room">
   <div class="card-body">
 
     <!-- Grid row -->
     <div class="row px-lg-2 px-2">
-
-      <!-- Grid column -->
-
-      <!-- Grid column -->
 
       <!-- Grid column -->
       <div class="col-md-12 col-xl-12 pl-md-3 px-lg-auto px-0">
@@ -25,55 +31,47 @@
         <div class="chat-message">
 
           <ul class="list-unstyled chat">
-            <li class="d-flex justify-content-between mb-4">
-              <img src="https://mdbootstrap.com/img/Photos/Avatars/avatar-6.jpg" alt="avatar" class="avatar rounded-circle mr-2 ml-lg-3 ml-0 z-depth-1">
+            <li class="d-flex justify-content-between mb-4 bubble">
               <div class="chat-body white p-3 ml-2 z-depth-1">
                 <div class="header">
-                  <strong class="primary-font">Brad Pitt</strong>
-                  <small class="pull-right text-muted"><i class="far fa-clock"></i> 12 mins ago</small>
+                  <strong>Brad Pitt</strong>
                 </div>
-                <hr class="w-100">
                 <p class="mb-0">
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                   labore et dolore magna aliqua.
                 </p>
               </div>
             </li>
-            <li class="d-flex justify-content-between mb-4">
-              <div class="chat-body white p-3 z-depth-1">
-                <div class="header">
-                  <strong class="primary-font">Lara Croft</strong>
-                  <small class="pull-right text-muted"><i class="far fa-clock"></i> 13 mins ago</small>
-                </div>
-                <hr class="w-100">
-                <p class="mb-0">
-                  Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
-                  laudantium.
-                </p>
-              </div>
-              <img src="https://mdbootstrap.com/img/Photos/Avatars/avatar-5.jpg" alt="avatar" class="avatar rounded-circle mr-0 ml-3 z-depth-1">
-            </li>
-            <li class="d-flex justify-content-between mb-4 pb-3">
-              <img src="https://mdbootstrap.com/img/Photos/Avatars/avatar-6.jpg" alt="avatar" class="avatar rounded-circle mr-2 ml-lg-3 ml-0 z-depth-1">
+            <li class="d-flex justify-content-between mb-4 bubble">
               <div class="chat-body white p-3 ml-2 z-depth-1">
                 <div class="header">
-                  <strong class="primary-font">Brad Pitt</strong>
-                  <small class="pull-right text-muted"><i class="far fa-clock"></i> 12 mins ago</small>
+                  <strong>Brad Pitt</strong>
                 </div>
-                <hr class="w-100">
                 <p class="mb-0">
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                   labore et dolore magna aliqua.
                 </p>
               </div>
             </li>
-            <li class="white">
+            <li class="d-flex justify-content-between mb-4 bubble">
+              <div class="chat-body white p-3 ml-2 z-depth-1">
+                <div class="header">
+                  <strong>Brad Pitt</strong>
+                </div>
+                <p class="mb-0">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                  labore et dolore magna aliqua.
+                </p>
+              </div>
+            </li>
+          </ul>
+
+          <div class="form">
               <div class="form-group basic-textarea">
                 <textarea class="form-control pl-2 my-0" id="exampleFormControlTextarea2" rows="3" placeholder="Type your message here..."></textarea>
               </div>
-            </li>
             <button type="button" class="btn btn-info btn-rounded btn-sm waves-effect waves-light float-right">Send</button>
-          </ul>
+          </div>
 
         </div>
 
@@ -84,7 +82,6 @@
     <!-- Grid row -->
 
   </div>
-</div>
 </div>
 
 </body>
