--- a/static/style.css
+++ b/static/style.css
@@ -12,6 +12,7 @@
 } */
 
 .bubble{
+  min-width: 800px;
   background-color: #fff;
   border-radius: 15px;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
