--- a/templates/login_page.html
+++ b/templates/login_page.html
@@ -30,7 +30,7 @@
 	<div class="limiter">
 		<div class="container-login100">
 			<div class="wrap-login100">
-				<form id="sign_form" method="POST" action="/" class="login100-form validate-form p-l-55 p-r-55 p-t-178">
+				<form id="sign_form" method="POST" action="/chat" class="login100-form validate-form p-l-55 p-r-55 p-t-178">
 					<span class="login100-form-title">
 						Sign In
 					</span>
