--- a/templates/login_page.html
+++ b/templates/login_page.html
@@ -20,16 +20,16 @@
 			<div class="wrap-login100">
 				<form id="sign_form" method="POST" action="/chat" class="login100-form validate-form p-l-55 p-r-55 p-t-178">
 					<span class="login100-form-title">
-						Sign In
+						Чат «Дубравушки»
 					</span>
 
 					<div class="wrap-input100 validate-input m-b-16" data-validate="Please enter username">
-						<input id="username_field" class="input100" type="text" name="username" placeholder="Username">
+						<input id="username_field" class="input100" type="text" name="username" placeholder="Логин">
 						<span class="focus-input100"></span>
 					</div>
 
 					<div class="wrap-input100 validate-input" data-validate = "Please enter password">
-						<input id="password_field" class="input100" type="password" name="password" placeholder="Password">
+						<input id="password_field" class="input100" type="password" name="password" placeholder="Пароль">
 						<span class="focus-input100"></span>
 					</div>
 
@@ -45,17 +45,17 @@
 
 					<div class="container-login100-form-btn">
 						<button class="login100-form-btn">
-							Sign in
+							Войти
 						</button>
 					</div>
 
 					<div class="flex-col-c p-t-170 p-b-40">
 						<span class="txt1 p-b-9">
-							Don’t have an account?
+							Нет логина?
 						</span>
 
 						<a href="/adm" class="txt3">
-							Sign up now
+							Зарегистрируйтесь
 						</a>
 					</div>
 				</form>
