--- a/templates/login_page.html
+++ b/templates/login_page.html
@@ -64,13 +64,13 @@
 	</div>
 <script>
     if('{{ registered }}' == 'True') {
-        alert('You have already registered!');
+        alert('Теперь вы зарегистрированы!');
     }
     if('{{ errorpass }}' == 'True') {
-        alert('Неверный пароль');
+        alert('Неверный пароль.');
     }
     if('{{ erroruser }}' == 'True') {
-        alert('Неверный логин');
+        alert('Неверный логин.');
     }
 </script>
 
