--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,7 +1,6 @@
 
 
 
-
 /*//////////////////////////////////////////////////////////////////
 [ FONT ]*/
 
@@ -14,12 +13,6 @@
   font-family: Ubuntu-Bold;
   src: url('../fonts/ubuntu/Ubuntu-Bold.ttf');
 }
-
-@font-face {
-  font-family: JosefinSans-Bold;
-  src: url('../fonts/JosefinSans/JosefinSans-Bold.ttf');
-}
-
 
 
 /*//////////////////////////////////////////////////////////////////
@@ -200,7 +193,7 @@ iframe {
 }
 
 .login100-form-title {
-  font-family: JosefinSans-Bold;
+  font-family: Ubuntu-Bold;
   font-size: 30px;
   color: #fff;
   line-height: 1.2;
@@ -357,22 +350,6 @@ iframe {
   transition: opacity 0.4s;
 }
 
-.alert-validate::after {
-  content: "\f06a";
-  font-family: FontAwesome;
-  display: block;
-  position: absolute;
-  z-index: 1100;
-  color: #c80000;
-  font-size: 16px;
-  top: 50%;
-  -webkit-transform: translateY(-50%);
-  -moz-transform: translateY(-50%);
-  -ms-transform: translateY(-50%);
-  -o-transform: translateY(-50%);
-  transform: translateY(-50%);
-  right: 16px;
-}
 
 .alert-validate:hover:before {
   visibility: visible;
