--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,18 +1,13 @@
 .card {  display: flex;
   align-items: center;
-  justify-content: center; }
+  justify-content: center;
+}
 
-.card-body {max-width: 1000px; }
-
-/* .bubble:hover {
-  outline: 1px solid #ccc; /*border-radius: 30px;
-  -webkit-box-shadow: 7px 4px 45px -9px rgba(0,0,0,0.33);
-  -moz-box-shadow: 7px 4px 45px -9px rgba(0,0,0,0.33);
-  box-shadow: 7px 4px 45px -9px rgba(0,0,0,0.33);
-} */
+.card-body {max-width: 1000px;
+min-width: 800px;}
 
 .bubble{
-  min-width: 800px;
+  /*min-width: 800px;*/
   background-color: #fff;
   border-radius: 15px;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
@@ -41,3 +36,8 @@
 .bubble:hover::after{
   opacity: 1;
 }
+
+
+.small {color: grey;  margin: 0; font-size: 50%;}
+.message {margin: 0;}
+.chat-message {width: 100%;}
