--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,14 +1,26 @@
 .card {  display: flex;
   align-items: center;
   justify-content: center;
+  border: none;
 }
 
 .card-body {max-width: 1000px;
 min-width: 800px;}
 
+.chat{
+  padding-right: 20px;
+  padding-left: 20px;
+  max-height: 586px; /*TODO гибкую высоту списка*/
+  overflow-y: auto;
+}
+
+.chat::-webkit-scrollbar {
+  display: none;
+}
+
 .bubble{
   /*min-width: 800px;*/
-  background-color: #fff;
+  /*background-color: #fff;*/
   border-radius: 15px;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
   -webkit-transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
@@ -16,7 +28,7 @@ min-width: 800px;}
 }
 
 .bubble::after{
-  content: "";
+  content: none;
   border-radius: 15px;
   z-index: -1;
   position: absolute;
@@ -37,7 +49,14 @@ min-width: 800px;}
   opacity: 1;
 }
 
-
 .small {color: grey;  margin: 0; font-size: 50%;}
 .message {margin: 0;}
 .chat-message {width: 100%;}
+.bubble.grey { background-color: #F8F8F8; }
+.bubble.white { background-color: #fff; }
+.form-control:focus{
+    color: #495057;
+    background-color: #fff;
+    border-color: green;
+    outline: 0;
+}
